feat: finish endpoints
